# ArdaCore

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
ArdaCore/: Array.h  ArrayView.h  Assert.h  CMakeLists.txt  Core.h  DynamicArray.h  String.cpp  String.h  StringView.cpp  StringView.h
Tests/: CMakeLists.txt  TestArray.cpp  TestArrayView.cpp  TestDynamicArray.cpp  TestStringView.cpp  Tests.cpp  UnitTests.cpp  UnitTests.h  main.cpp
